--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Devotional exercises'
 - !lcc 'BV'
 - !lcsh 'Calendars'
+- GITenberg
 title: Days of Heaven Upon Earth
 url: http://www.gutenberg.org/ebooks/28416
